@@ -795,15 +795,15 @@ this repository contains the full copyright notices and license terms. -->
             <field name="function">trigger_time</field>
         </record>
 
-        <record model="ir.model.access" id="rule_default_view_tree_expanded_state">
-            <field name="model" search="[('model', '=', 'ir.ui.view_tree_expanded_state')]" />
+        <record model="ir.model.access" id="rule_default_view_tree_state">
+            <field name="model" search="[('model', '=', 'ir.ui.view_tree_state')]" />
             <field name="perm_read" eval="False" />
             <field name="perm_write" eval="False" />
             <field name="perm_create" eval="False" />
             <field name="perm_delete" eval="False" />
         </record>
-        <record model="ir.model.access" id="rule_group_view_tree_expanded_state">
-            <field name="model" search="[('model', '=', 'ir.ui.view_tree_expanded_state')]" />
+        <record model="ir.model.access" id="rule_group_view_tree_state">
+            <field name="model" search="[('model', '=', 'ir.ui.view_tree_state')]" />
             <field name="group" ref="res.group_admin" />
             <field name="perm_read" eval="True" />
             <field name="perm_write" eval="True" />
